# libPlaySound

./: .gitignore  CMakeLists.txt  README.md  gen_vs2015_64.sh  main.cpp  playsound.cpp  playsound.h
